# render-lock-wgpu

./: .gitignore  Cargo.toml  build.rs  imgui.ini
resources/: arbol.mtl  viking_room.mtl
resources/shaders/: light.vert  shader.frag
src/: asset.rs  bind_group.rs  camera.rs  chunk.rs  display.rs  event.rs  game.rs  gui.rs  instance.rs  light.rs  main.rs  material.rs  math.rs  mesh.rs  model.rs  pipeline.rs  primitive.rs  ray.rs  renderer.rs  scene.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  texture.rs  timestep.rs
src/ecs/: component.rs  system.rs
src/renderer/: display.rs  instance.rs  texture.rs
src/storage/: main.rs  model.rs
src/storage/renderer/: camera.rs  instance.rs  mod.rs  pipeline.rs  texture.rs
src/worker/: mod.rs  pool.rs  worker.rs
