[package]
name = "render-lock"
version = "0.1.0"
authors = ["kriston"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.24"
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
futures = "0.3"
wgpu-subscriber = "0.1.0"
anyhow = "1.0"
failure = "0.1"
imgui = "0.7"
imgui-wgpu = "0.14"
imgui-winit-support = "0.7"
legion = "0.4.0"

[dependencies.tobj]
version = "2.0"
features = ["log"]

[dependencies.bytemuck]
version = "1.5"
features = ["derive"]

[dependencies.wgpu]
version = "0.7"
features = ["vulkan-portability"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.7"